--- a/src/app/pages/kitchen-transactions/kitchen-transactions.component.html
+++ b/src/app/pages/kitchen-transactions/kitchen-transactions.component.html
@@ -12,7 +12,7 @@
         <div class="card">
           <div class="card-header">
             <div class="h5">
-              ລາຍງານຍອດຂາຍ ຂອງ ວັນທີ <span class="font-weight-bold h4"
+              ລາຍງານຍອດຂາຍ ຂອງ ວັນທີ <span class="font-weight-bold h4 ml-3"
                 style="color: brown;">{{ currentDate | date: 'dd-MMM-yyyy' }}</span>
             </div>
           </div>
