--- a/src/app/pages/pos/pos.component.html
+++ b/src/app/pages/pos/pos.component.html
@@ -43,10 +43,10 @@
                     <span class="h4" style="color: rgb(255, 94, 0);">ເລືອກ</span>
                   </ng-template>
                 </div>
-                <img src="{{ food.food_photo }}" alt="{{ food.food_name }}" class="img-thumbnail">
+                <img src="{{ food.food_photo }}" alt="{{ food.food_name }}" class="img-thumbnail itemImg">
                 <div class="title align-middle">
                   <div class="align-middle">
-                    <span class="font-weight-light lead ">{{ food.food_name }}</span>
+                    <span class="font-weight-light h5">{{ food.food_name }}</span>
                   </div>
                 </div>
               </div>
