--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -104,7 +104,7 @@
               <div class="card-block">
                 <div class="m-b-20 h4" style="margin-bottom: 20px;">ຍອດຂາຍ ຂອງວັນ
                   {{ currentDate |date: 'dd-MMM-yyyy'}}
-                  ລະບົບເກົ່າ
+                  ເກົ່າ
                 </div>
                 <mat-divider></mat-divider>
                 <br />
@@ -121,6 +121,26 @@
               </div>
             </div>
           </div>
+
+
+          <div class="col-md-4 col-xl-3">
+            <div class="card bg-c-blue order-card">
+              <div class="card-block">
+                <div class="m-b-20 h4" style="margin-bottom: 20px;">ລາຍການປະຈຸບັນ</div>
+                <mat-divider></mat-divider>
+                <br />
+                <ng-container *ngFor="let inQ of dashboardInQReports ; let i = index">
+                  <div class="row">
+                    <div class="col col-md-4 h6 text-left text-nowrap">{{ inQ.status }}</div>
+                    <div class="col col-md-4 h6 text-right">{{ inQ.count |number }}</div>
+                    <div class="col col-md-4 h6 text-right text-nowrap">{{ inQ.Total |number }} ກິບ</div>
+                  </div>
+                </ng-container>
+              </div>
+            </div>
+          </div>
+
+
           <div class="col-md-4 col-xl-3">
             <div class="card bg-c-blue order-card">
               <div class="card-block">
@@ -164,13 +184,20 @@
                 <div class="m-b-20 h4" style="margin-bottom: 20px;">ຍອດຂາຍລາຍການອາຫານຍອດ</div>
                 <mat-divider></mat-divider>
                 <br />
-                <ng-container *ngFor=" let foods of summaryReports_Foods_letterp; let i = index">
-                  <div class="row">
-                    <div class="col col-md-5 h6 text-left">{{ foods.food_name }}</div>
-                    <div class="col col-md-2 h6 text-right">{{ foods.quantity | number }}</div>
-                    <div class="col col-md-5 h6 text-right">{{ foods.total_price |number }} ກິບ</div>
-                  </div>
-                </ng-container>
+                <mat-accordion>
+                  <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                      ຍອດຂາຍລາຍການອາຫານຍອດ
+                    </mat-expansion-panel-header>
+                    <ng-container *ngFor=" let foods of summaryReports_Foods_letterp; let i = index">
+                      <div class="row">
+                        <div class="col col-md-5 h6 text-left">{{ foods.food_name }}</div>
+                        <div class="col col-md-2 h6 text-right">{{ foods.quantity | number }}</div>
+                        <div class="col col-md-5 h6 text-right">{{ foods.total_price |number }} ກິບ</div>
+                      </div>
+                    </ng-container>
+                  </mat-expansion-panel>
+                </mat-accordion>
               </div>
             </div>
           </div>
