--- a/src/app/pages/pos/pos.component.html
+++ b/src/app/pages/pos/pos.component.html
@@ -86,6 +86,8 @@
                           style="position: absolute; right:30px; cursor: pointer;" (click)="addnote(cart)">
                         <img src="../../../assets/icons/baseline-delete-24px.svg"
                           style="position: absolute; right:1px; cursor: pointer;" (click)="removeFromlist(cart)">
+                        <img src="../../../assets/icons/baseline-confirmation_number-24px.svg"
+                          style="position: absolute; right:-28px; cursor: pointer;" (click)="addCoupon()">
                       </div>
                     </div>
                   </mat-list-item>
