--- a/src/app/dialogs/close-balance/close-balance.component.html
+++ b/src/app/dialogs/close-balance/close-balance.component.html
@@ -25,7 +25,7 @@
       <input type="number" class="form-control" readonly formControlName="cashBalance" id="cashBalance">
     </div>
     <div class="form-group col-md-9">
-      <label for="cashInHands">ຍອດລວມເງິນສົດ ທີ້ຕ້ອງສົ່ງ</label>
+      <label for="cashInHands">ຍອດສຸທິ</label>
       <input type="number" class="form-control" readonly formControlName="cashInHands" id="cashInHands">
     </div>
     <div class="form-group col-md-9">
