--- a/src/app/pages/cashload/cashload.component.html
+++ b/src/app/pages/cashload/cashload.component.html
@@ -5,7 +5,7 @@
       <span>Cashloads Managements</span>
     </mat-card-title>
     <span style="position: absolute; right:16px;">
-      <button mat-flat-button color="primary" style="width: 200px;" (click)="openCash()">Open</button>
+      <button mat-flat-button color="primary" style="width: 200px;" (click)="openCash()">ເປີດຂາຍ</button>
     </span>
 
     <mat-card-subtitle>All current Cashloads</mat-card-subtitle>
