--- a/src/app/pages/orders/orders.component.html
+++ b/src/app/pages/orders/orders.component.html
@@ -5,7 +5,7 @@
     <mat-card-subtitle>All current orders</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <div>
+    <div class="table-responsive">
       <table class="table table-bordered ">
         <thead class="thead-light">
           <tr>
