--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -14,20 +14,19 @@
           <div class="card-body">
             <form [formGroup]="dateForm">
               <div class="row">
-
-                <div class="col col-md-2">
-                  <label for="fromDate" class="lead">ເລີ່ມຈາກວັນທີ</label>
+                <div class="col col-md-2 col-sm-12">
+                  <label for="fromDate" class="h5">ເລີ່ມຈາກວັນທີ</label>
                   <div class="input-group mb-1">
                     <input type="date" class="form-control" formControlName="startDate">
                   </div>
                 </div>
-                <div class="col col-md-2" class="lead">
-                  <label for="fromDate">ຮອດວັນທີ</label>
+                <div class="col col-md-2  col-sm-12">
+                  <label for="fromDate" class="h5">ຮອດວັນທີ</label>
                   <div class="input-group mb-1">
                     <input type="date" class="form-control" formControlName="endDate">
                   </div>
                 </div>
-                <div class="col col-md-2">
+                <div class="col col-md-2  col-sm-12">
                   <label for="fromDate"></label>
                   <div class="input-group mb-1">
                     <button mat-raised-button color="primary" (click)="loadReport()"
@@ -37,7 +36,6 @@
                 <div class="col col-md-4">
                   <span>{{ reportProcess }}</span>
                 </div>
-
               </div>
             </form>
           </div>
