--- a/src/app/pages/expenditures/expenditures.component.html
+++ b/src/app/pages/expenditures/expenditures.component.html
@@ -45,7 +45,7 @@
             <td class="text-center align-middle">{{ exp.unit_name  }}</td>
             <td class="text-right align-middle">{{ exp.price | number }}</td>
             <td class="text-right align-middle">{{ exp.amount | number }}</td>
-            <td class="text-center align-middle">{{ exp.src_name }}</td>
+            <td class="text-center align-middle">{{ exp.terminal_name }}</td>
             <td class="text-center align-middle">{{  exp.username }}</td>
             <td class="text-center align-middle" *ngIf="exp.isApproved===1;else unApproved">
               <img src="../../../assets/icons/Check_green_icon.svg.png" style="width: 25px;cursor: pointer;">
