--- a/src/app/dialogs/close-balance/close-balance.component.html
+++ b/src/app/dialogs/close-balance/close-balance.component.html
@@ -38,7 +38,7 @@
       <input type="number" class="form-control" readonly id="fwdBalance" formControlName="fwdBalance">
     </div>
     <div class="form-group col-md-9">
-      <label for="terminalId">ກະແສັດເງິນ</label>
+      <label for="terminalId">ລິ້ນຊັກ</label>
       <input type="number" class="form-control" readonly formControlName="terminalId" id="terminalId">
     </div>
     <div class="form-group col-md-9">
