--- a/src/app/dialogs/add-products/add-products.component.html
+++ b/src/app/dialogs/add-products/add-products.component.html
@@ -9,17 +9,10 @@
       <input type="text" class="form-control" id="barcodetxt" placeholder="Barcode" formControlName="barcode" required>
     </div>
     <div class="form-group col-md-6">
-      <label for="productCode">Product code</label>
-      <input type="text" class="form-control" id="productCode" placeholder="Product code" formControlName="product_code"
-        required>
-    </div>
-    <div class="form-group col-md-6">
       <label for="productName">Product Name</label>
       <input type="text" class="form-control" id="productName" placeholder="Product Name" formControlName="product_name"
         required>
     </div>
-
-
     <div class="form-group col-md-6">
       <label for="productTypeCode">Product Types</label>
       <select class="form-control" formControlName="categoryId" required>
@@ -31,7 +24,7 @@
 
     <div class="form-group col-md-6">
       <label for="foodId">Food Name</label>
-      <select class="form-control" id="foodId" formControlName="foodId">
+      <select class="form-control" id="foodId" formControlName="foodId" [attr.disabled]="foodDisabled">
         <option disabled value="-1">------</option>
         <option value="{{ food.id }}" *ngFor="let food of foods ">{{ food.food_name }}</option>
       </select>
